feat(css): add more styles

--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,7 @@
           </h1>
         </div>
         <div class="col-xs-9 text-right text-uppercase">
-          <h1>Mischa Radenovic</h1>
+          <h1 class="">Mischa Radenovic</h1>
           <h4>Moving Jedi</h4>
         </div>
       </header>
@@ -50,7 +50,7 @@
       </div>
       <div class="row">
         <div class="col-xs-12">
-          <h2>Featured Work</h2>
+          <h2 class="text-muted">Featured Work</h2>
         </div>
         <div class="col-sm-4">
           <img class="img-responsive" src="http://placehold.it/800x600" alt="800x600 image">
