fix(html): move heading to separate column

--- a/app/index.html
+++ b/app/index.html
@@ -48,10 +48,14 @@
           <img class="img-responsive" src="http://placehold.it/1024x768" alt="1024x768 image">
         </div>
       </div>
+
       <div class="row">
         <div class="col-xs-12">
           <h2 class="text-muted">Featured Work</h2>
         </div>
+      </div>
+
+      <div class="row">
         <div class="col-sm-4">
           <img class="img-responsive" src="http://placehold.it/800x600" alt="800x600 image">
           <h4 class="text-uppercase">Project Heading</h4>
