fix(html): add some semantics

--- a/app/index.html
+++ b/app/index.html
@@ -55,7 +55,7 @@
         </div>
       </div>
 
-      <div class="row">
+      <section id="featured-work" class="row">
         <div class="col-sm-4">
           <img class="img-responsive" src="http://placehold.it/800x600" alt="800x600 image">
           <h4 class="text-uppercase">Project Heading</h4>
