feat: add some real content

--- a/app/index.html
+++ b/app/index.html
@@ -43,41 +43,60 @@
         </div>
       </div>
 
-      <div class="row">
+      <section id="moving-star" class="row">
         <div class="col-xs-12">
-          <img class="img-responsive" src="http://placehold.it/1024x768" alt="1024x768 image">
+          <img class="img-responsive" src="images/Moving-My-Stuff.png" alt="Moving my staf">
+          <h3>Movin' Star</h3>
+          <p>
+            Once upon a time, an ocean away, Mischa was a software developer.
+            Since than, he has mastered moving skills.
+            In places whith dimmed light and loud music, he calls himself
+            <strong>A Movin' Star</strong>, which is often over heard as
+            <strong>A Movie Star</strong>.
+          </p>
         </div>
-      </div>
+      </section>
 
-      <div class="row">
+      <section id="featured-work-heading" class="row">
         <div class="col-xs-12">
           <h2 class="text-muted">Featured Work</h2>
         </div>
-      </div>
+      </section>
 
-      <section id="featured-work" class="row">
+      <section id="featured-work" class="row text-center">
         <div class="col-sm-4">
-          <img class="img-responsive" src="http://placehold.it/800x600" alt="800x600 image">
-          <h4 class="text-uppercase">Project Heading</h4>
+          <img class="img-responsive" src="images/Build-a-Portfolio-Site.png  " alt="Build a Portfolio Site">
+          <h4 class="text-uppercase">Build a Portfolio Site</h4>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            Build a Portfolio Site is the second project built during completion of the Udacity's Nanodegree program Full Stack Web Developer.
           </p>
+          <a href="https://github.com/mradenovic/build-a-portfolio-site">View on github</a>
         </div>
         <div class="col-sm-4">
-          <img class="img-responsive" src="http://placehold.it/800x600" alt="800x600 image">
-          <h4 class="text-uppercase">Project Heading</h4>
+          <img class="img-responsive" src="images/Granottifier.png" alt="Granottifier">
+          <h4 class="text-uppercase">Granottifier</h4>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            Google Chrome extension that integrates Granot Moving Software with (some) Google services
           </p>
+          <a href="https://github.com/mradenovic/granoogle">View on github</a>
         </div>
         <div class="col-sm-4">
-          <img class="img-responsive" src="http://placehold.it/800x600" alt="800x600 image">
-          <h4 class="text-uppercase">Project Heading</h4>
+          <img class="img-responsive" src="images/makespace-tip-calculator.png" alt="MakeSpace Tip Calculator">
+          <h4 class="text-uppercase">MakeSpace Tip Calculator</h4>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+            MakeSpace Tip Calculator is an app for MakeSpace Gmail domain users. It searches user's mailbox for e-mail messages that contain info about tips received and makes a digest of data found.
+          </p>
+          <a href="https://github.com/mradenovic/makespace-tip-calculator">View on github</a>
+        </div>
+      </section>
+
+      <footer class="row">
+        <div class="col-xs-12">
+          <p>
+            Made by Mischa Radenovic
           </p>
         </div>
-      </div>
+      </footer>
     </div>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
