feat(img): add alternative images

--- a/app/index.html
+++ b/app/index.html
@@ -65,7 +65,11 @@
 
       <section id="featured-work" class="row text-center">
         <div class="col-sm-4">
-          <img class="img-responsive" src="images/Build-a-Portfolio-Site.png  " alt="Build a Portfolio Site">
+          <picture>
+            <source media="(min-width: 768px)"
+            srcset="images/Build-a-Portfolio-Site800x509.png">
+            <img class="img-responsive" src="images/Build-a-Portfolio-Site.png" alt="MakeSpace Tip Calculator">
+          </picture>
           <h4 class="text-uppercase">Build a Portfolio Site</h4>
           <p>
             Build a Portfolio Site is the second project built during completion of the Udacity's Nanodegree program Full Stack Web Developer.
@@ -81,7 +85,11 @@
           <a href="https://github.com/mradenovic/granoogle">View on github</a>
         </div>
         <div class="col-sm-4">
-          <img class="img-responsive" src="images/makespace-tip-calculator.png" alt="MakeSpace Tip Calculator">
+          <picture>
+            <source media="(min-width: 768px)"
+            srcset="images/makespace-tip-calculator800x509.png">
+            <img class="img-responsive" src="images/makespace-tip-calculator.png" alt="MakeSpace Tip Calculator">
+          </picture>
           <h4 class="text-uppercase">MakeSpace Tip Calculator</h4>
           <p>
             MakeSpace Tip Calculator is an app for MakeSpace Gmail domain users. It searches user's mailbox for e-mail messages that contain info about tips received and makes a digest of data found.
