--- a/app/index.html
+++ b/app/index.html
@@ -11,7 +11,8 @@
 
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
-    <link href="https://fonts.googleapis.com/css?family=Catamaran:100,400|Lato:100,300" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Catamaran:100,400" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:100,300" rel="stylesheet">
     <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.css" />
     <!-- endbower -->
     <!-- endbuild -->
