Fix(html): remove style from html

--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,7 @@
       <header class="row">
         <div class="col-xs-3">
           <h1>
-            <img class="img-fluid" style="height: 2em" src="images/logo.svg" alt="Logo">
+            <img class="img-fluid logo" src="images/logo.svg" alt="Logo">
           </h1>
         </div>
         <div class="col-xs-9 text-right text-uppercase">
